// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Graph gracefully renders a graph with a selected node id that does not exist 1`] = `
<DocumentFragment>
  <div
    class="root"
  >
    <div
      class="node graphNode"
      style="left: 86px; max-height: 64px; min-height: 64px; top: 32px; transition: left 0.5s, top 0.5s; width: 172px;"
    >
      <div
        aria-label="node1"
        class="label"
        data-mui-internal-clone-element="true"
      >
        node1
      </div>
      <div
        class="icon"
      >
        <svg
          aria-hidden="true"
          aria-label="Test icon tooltip"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-mui-internal-clone-element="true"
          data-testid="CheckCircleIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"
          />
        </svg>
      </div>
    </div>
    <div
      class="node graphNode"
      style="left: 86px; max-height: 64px; min-height: 64px; top: 146px; transition: left 0.5s, top 0.5s; width: 172px;"
    >
      <div
        aria-label="node2"
        class="label"
        data-mui-internal-clone-element="true"
      >
        node2
      </div>
      <div
        class="icon"
      >
        <svg
          aria-hidden="true"
          aria-label="Test icon tooltip"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-mui-internal-clone-element="true"
          data-testid="CheckCircleIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"
          />
        </svg>
      </div>
    </div>
    <div>
      <div
        class="line"
        style="background-color: rgb(95, 99, 104); height: 2px; left: 171.75px; top: 119px; transform: rotate(-90deg); transition: left 0.5s, top 0.5s; width: 28.5px;"
      />
      <div
        class="line"
        style="background-color: rgb(95, 99, 104); height: 2px; left: 176.75px; top: 142px; transform: rotate(-90deg); transition: left 0.5s, top 0.5s; width: 18.5px;"
      />
      <div
        class="arrowHead"
        style="border-top-color: #5f6368; left: 180px; top: 148px; transform: rotate(0deg);"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Graph handles an empty graph 1`] = `<DocumentFragment />`;

exports[`Graph renders a complex graph with six nodes and seven edges 1`] = `
<DocumentFragment>
  <div
    class="root"
  >
    <div
      class="node graphNode"
      style="left: 277.5px; max-height: 64px; min-height: 64px; top: 32px; transition: left 0.5s, top 0.5s; width: 172px;"
    >
      <div
        aria-label="flipcoin1"
        class="label"
        data-mui-internal-clone-element="true"
      >
        flipcoin1
      </div>
      <div
        class="icon"
      >
        <svg
          aria-hidden="true"
          aria-label="Test icon tooltip"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-mui-internal-clone-element="true"
          data-testid="CheckCircleIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"
          />
        </svg>
      </div>
    </div>
    <div
      class="node graphNode"
      style="left: 126px; max-height: 64px; min-height: 64px; top: 146px; transition: left 0.5s, top 0.5s; width: 172px;"
    >
      <div
        aria-label="tails1"
        class="label"
        data-mui-internal-clone-element="true"
      >
        tails1
      </div>
      <div
        class="icon"
      >
        <svg
          aria-hidden="true"
          aria-label="Test icon tooltip"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-mui-internal-clone-element="true"
          data-testid="CheckCircleIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"
          />
        </svg>
      </div>
    </div>
    <div
      class="node graphNode"
      style="left: 348px; max-height: 64px; min-height: 64px; top: 146px; transition: left 0.5s, top 0.5s; width: 172px;"
    >
      <div
        aria-label="heads1"
        class="label"
        data-mui-internal-clone-element="true"
      >
        heads1
      </div>
      <div
        class="icon"
      >
        <svg
          aria-hidden="true"
          aria-label="Test icon tooltip"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-mui-internal-clone-element="true"
          data-testid="CheckCircleIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"
          />
        </svg>
      </div>
    </div>
    <div
      class="node graphNode"
      style="left: 166.5px; max-height: 64px; min-height: 64px; top: 260px; transition: left 0.5s, top 0.5s; width: 172px;"
    >
      <div
        aria-label="flipcoin2"
        class="label"
        data-mui-internal-clone-element="true"
      >
        flipcoin2
      </div>
      <div
        class="icon"
      >
        <svg
          aria-hidden="true"
          aria-label="Test icon tooltip"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-mui-internal-clone-element="true"
          data-testid="CheckCircleIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"
          />
        </svg>
      </div>
    </div>
    <div
      class="node graphNode"
      style="left: 86px; max-height: 64px; min-height: 64px; top: 374px; transition: left 0.5s, top 0.5s; width: 172px;"
    >
      <div
        aria-label="heads2"
        class="label"
        data-mui-internal-clone-element="true"
      >
        heads2
      </div>
      <div
        class="icon"
      >
        <svg
          aria-hidden="true"
          aria-label="Test icon tooltip"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-mui-internal-clone-element="true"
          data-testid="CheckCircleIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"
          />
        </svg>
      </div>
    </div>
    <div
      class="node graphNode"
      style="left: 328px; max-height: 64px; min-height: 64px; top: 374px; transition: left 0.5s, top 0.5s; width: 172px;"
    >
      <div
        aria-label="tails2"
        class="label"
        data-mui-internal-clone-element="true"
      >
        tails2
      </div>
      <div
        class="icon"
      >
        <svg
          aria-hidden="true"
          aria-label="Test icon tooltip"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-mui-internal-clone-element="true"
          data-testid="CheckCircleIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"
          />
        </svg>
      </div>
    </div>
    <div>
      <div
        class="line"
        style="background-color: rgb(95, 99, 104); height: 2px; left: 223.3847151833993px; top: 119px; transform: rotate(-19.179008025810724deg); transition: left 0.5s, top 0.5s; width: 85.73056963320144px;"
      />
      <div
        class="line"
        style="background-color: rgb(95, 99, 104); height: 2px; left: 216.75px; top: 142px; transform: rotate(-90deg); transition: left 0.5s, top 0.5s; width: 18.5px;"
      />
      <div
        class="arrowHead"
        style="border-top-color: #5f6368; left: 220px; top: 148px; transform: rotate(0deg);"
      />
    </div>
    <div>
      <div
        class="line"
        style="background-color: rgb(95, 99, 104); height: 2px; left: 411.4321518532271px; top: 119px; transform: rotate(-137.83815493661623deg); transition: left 0.5s, top 0.5s; width: 42.21464366196691px;"
      />
      <div
        class="line"
        style="background-color: rgb(95, 99, 104); height: 2px; left: 438.75px; top: 142px; transform: rotate(-90deg); transition: left 0.5s, top 0.5s; width: 18.5px;"
      />
      <div
        class="arrowHead"
        style="border-top-color: #5f6368; left: 442px; top: 148px; transform: rotate(0deg);"
      />
    </div>
    <div>
      <div
        class="line"
        style="background-color: rgb(95, 99, 104); height: 2px; left: 240.78884190844525px; top: 233px; transform: rotate(-122.3909803444195deg); transition: left 0.5s, top 0.5s; width: 33.65915828837264px;"
      />
      <div
        class="line"
        style="background-color: rgb(95, 99, 104); height: 2px; left: 257.25px; top: 256px; transform: rotate(-90deg); transition: left 0.5s, top 0.5s; width: 18.5px;"
      />
      <div
        class="arrowHead"
        style="border-top-color: #5f6368; left: 260.5px; top: 262px; transform: rotate(0deg);"
      />
    </div>
    <div>
      <div
        class="line"
        style="background-color: rgb(95, 99, 104); height: 2px; left: 140.372499652039px; top: 233px; transform: rotate(-38.41594601302922deg); transition: left 0.5s, top 0.5s; width: 45.56201823978164px;"
      />
      <div
        class="line"
        style="background-color: rgb(95, 99, 104); height: 2px; left: 116.75px; top: 275.5px; transform: rotate(-90deg); transition: left 0.5s, top 0.5s; width: 57.5px;"
      />
      <div
        class="line"
        style="background-color: rgb(95, 99, 104); height: 2px; left: 116.75px; top: 332.5px; transform: rotate(-90deg); transition: left 0.5s, top 0.5s; width: 57.5px;"
      />
      <div
        class="line"
        style="background-color: rgb(95, 99, 104); height: 2px; left: 144.17505120932952px; top: 365.5px; transform: rotate(-153.13018691250096deg); transition: left 0.5s, top 0.5s; width: 20.413055476077794px;"
      />
      <div
        class="line"
        style="background-color: rgb(95, 99, 104); height: 2px; left: 158.26315789473685px; top: 374px; transform: rotate(270deg); transition: left 0.5s, top 0.5s; width: 9px;"
      />
      <div
        class="arrowHead"
        style="border-top-color: #5f6368; left: 157.26315789473685px; top: 376px; transform: rotate(360deg);"
      />
    </div>
    <div>
      <div
        class="line"
        style="background-color: rgb(95, 99, 104); height: 2px; left: 267.1184551772871px; top: 233px; transform: rotate(-166.70559269932568deg); transition: left 0.5s, top 0.5s; width: 122.26308964542581px;"
      />
      <div
        class="line"
        style="background-color: rgb(95, 99, 104); height: 2px; left: 358.75px; top: 275.5px; transform: rotate(-90deg); transition: left 0.5s, top 0.5s; width: 57.5px;"
      />
      <div
        class="line"
        style="background-color: rgb(95, 99, 104); height: 2px; left: 358.75px; top: 332.5px; transform: rotate(-90deg); transition: left 0.5s, top 0.5s; width: 57.5px;"
      />
      <div
        class="line"
        style="background-color: rgb(95, 99, 104); height: 2px; left: 386.1750512093295px; top: 365.5px; transform: rotate(-153.13018691250093deg); transition: left 0.5s, top 0.5s; width: 20.413055476077776px;"
      />
      <div
        class="line"
        style="background-color: rgb(95, 99, 104); height: 2px; left: 400.2631578947368px; top: 374px; transform: rotate(270deg); transition: left 0.5s, top 0.5s; width: 9px;"
      />
      <div
        class="arrowHead"
        style="border-top-color: #5f6368; left: 399.2631578947368px; top: 376px; transform: rotate(360deg);"
      />
    </div>
    <div>
      <div
        class="line"
        style="background-color: rgb(95, 99, 104); height: 2px; left: 252.25px; top: 347px; transform: rotate(-90deg); transition: left 0.5s, top 0.5s; width: 28.5px;"
      />
      <div
        class="line"
        style="background-color: rgb(95, 99, 104); height: 2px; left: 228.21755980172634px; top: 365.5px; transform: rotate(-13.495733280795813deg); transition: left 0.5s, top 0.5s; width: 39.06488039654732px;"
      />
      <div
        class="line"
        style="background-color: rgb(95, 99, 104); height: 2px; left: 224px; top: 374px; transform: rotate(270deg); transition: left 0.5s, top 0.5s; width: 9px;"
      />
      <div
        class="arrowHead"
        style="border-top-color: #5f6368; left: 223px; top: 376px; transform: rotate(360deg);"
      />
    </div>
    <div>
      <div
        class="line"
        style="background-color: rgb(95, 99, 104); height: 2px; left: 307.8490092072305px; top: 347px; transform: rotate(-168.57078432667006deg); transition: left 0.5s, top 0.5s; width: 141.80198158553898px;"
      />
      <div
        class="line"
        style="background-color: rgb(95, 99, 104); height: 2px; left: 437.08019166098137px; top: 365.5px; transform: rotate(-45.735246049496496deg); transition: left 0.5s, top 0.5s; width: 13.067686853475871px;"
      />
      <div
        class="line"
        style="background-color: rgb(95, 99, 104); height: 2px; left: 434.2280701754386px; top: 374px; transform: rotate(270deg); transition: left 0.5s, top 0.5s; width: 9px;"
      />
      <div
        class="arrowHead"
        style="border-top-color: #5f6368; left: 433.2280701754386px; top: 376px; transform: rotate(360deg);"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Graph renders a graph with a placeholder node and edge 1`] = `
<DocumentFragment>
  <div
    class="root"
  >
    <div
      class="node graphNode"
      style="left: 86px; max-height: 64px; min-height: 64px; top: 32px; transition: left 0.5s, top 0.5s; width: 172px;"
    >
      <div
        aria-label="node1"
        class="label"
        data-mui-internal-clone-element="true"
      >
        node1
      </div>
      <div
        class="icon"
      >
        <svg
          aria-hidden="true"
          aria-label="Test icon tooltip"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-mui-internal-clone-element="true"
          data-testid="CheckCircleIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"
          />
        </svg>
      </div>
    </div>
    <div
      class="placeholderNode graphNode"
      style="left: 86px; max-height: 64px; min-height: 64px; top: 146px; transition: left 0.5s, top 0.5s; width: 172px;"
    >
      <div
        class="icon"
      >
        <svg
          aria-hidden="true"
          aria-label="Test icon tooltip"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-mui-internal-clone-element="true"
          data-testid="CheckCircleIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"
          />
        </svg>
      </div>
    </div>
    <div>
      <div
        class="line"
        style="background-color: rgb(154, 160, 166); height: 2px; left: 171.75px; top: 119px; transform: rotate(-90deg); transition: left 0.5s, top 0.5s; width: 28.5px;"
      />
      <div
        class="line"
        style="background-color: rgb(154, 160, 166); height: 2px; left: 173.25px; top: 145.5px; transform: rotate(-90deg); transition: left 0.5s, top 0.5s; width: 25.5px;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Graph renders a graph with a selected node 1`] = `
<DocumentFragment>
  <div
    class="root"
  >
    <div
      class="node graphNode nodeSelected"
      style="left: 86px; max-height: 64px; min-height: 64px; top: 32px; transition: left 0.5s, top 0.5s; width: 172px;"
    >
      <div
        aria-label="node1"
        class="label"
        data-mui-internal-clone-element="true"
      >
        node1
      </div>
      <div
        class="icon"
      >
        <svg
          aria-hidden="true"
          aria-label="Test icon tooltip"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-mui-internal-clone-element="true"
          data-testid="CheckCircleIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"
          />
        </svg>
      </div>
    </div>
    <div
      class="node graphNode"
      style="left: 86px; max-height: 64px; min-height: 64px; top: 146px; transition: left 0.5s, top 0.5s; width: 172px;"
    >
      <div
        aria-label="node2"
        class="label"
        data-mui-internal-clone-element="true"
      >
        node2
      </div>
      <div
        class="icon"
      >
        <svg
          aria-hidden="true"
          aria-label="Test icon tooltip"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-mui-internal-clone-element="true"
          data-testid="CheckCircleIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"
          />
        </svg>
      </div>
    </div>
    <div>
      <div
        class="line"
        style="background-color: rgb(26, 115, 232); height: 2px; left: 171.75px; top: 119px; transform: rotate(-90deg); transition: left 0.5s, top 0.5s; width: 28.5px;"
      />
      <div
        class="line"
        style="background-color: rgb(26, 115, 232); height: 2px; left: 176.75px; top: 142px; transform: rotate(-90deg); transition: left 0.5s, top 0.5s; width: 18.5px;"
      />
      <div
        class="arrowHead"
        style="border-top-color: #1a73e8; left: 180px; top: 148px; transform: rotate(0deg);"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Graph renders a graph with colored edges 1`] = `
<DocumentFragment>
  <div
    class="root"
  >
    <div
      class="node graphNode"
      style="left: 86px; max-height: 64px; min-height: 64px; top: 32px; transition: left 0.5s, top 0.5s; width: 172px;"
    >
      <div
        aria-label="node1"
        class="label"
        data-mui-internal-clone-element="true"
      >
        node1
      </div>
      <div
        class="icon"
      >
        <svg
          aria-hidden="true"
          aria-label="Test icon tooltip"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-mui-internal-clone-element="true"
          data-testid="CheckCircleIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"
          />
        </svg>
      </div>
    </div>
    <div
      class="node graphNode"
      style="left: 86px; max-height: 64px; min-height: 64px; top: 146px; transition: left 0.5s, top 0.5s; width: 172px;"
    >
      <div
        aria-label="node2"
        class="label"
        data-mui-internal-clone-element="true"
      >
        node2
      </div>
      <div
        class="icon"
      >
        <svg
          aria-hidden="true"
          aria-label="Test icon tooltip"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-mui-internal-clone-element="true"
          data-testid="CheckCircleIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"
          />
        </svg>
      </div>
    </div>
    <div>
      <div
        class="line"
        style="background-color: rgb(95, 99, 104); height: 2px; left: 171.75px; top: 119px; transform: rotate(-90deg); transition: left 0.5s, top 0.5s; width: 28.5px;"
      />
      <div
        class="line"
        style="background-color: rgb(95, 99, 104); height: 2px; left: 176.75px; top: 142px; transform: rotate(-90deg); transition: left 0.5s, top 0.5s; width: 18.5px;"
      />
      <div
        class="arrowHead"
        style="border-top-color: #5f6368; left: 180px; top: 148px; transform: rotate(0deg);"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Graph renders a graph with colored nodes 1`] = `
<DocumentFragment>
  <div
    class="root"
  >
    <div
      class="node graphNode"
      style="background-color: red; left: 86px; max-height: 64px; min-height: 64px; top: 32px; transition: left 0.5s, top 0.5s; width: 172px;"
    >
      <div
        aria-label="node1"
        class="label"
        data-mui-internal-clone-element="true"
      >
        node1
      </div>
      <div
        class="icon"
      >
        <svg
          aria-hidden="true"
          aria-label="Test icon tooltip"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-mui-internal-clone-element="true"
          data-testid="CheckCircleIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"
          />
        </svg>
      </div>
    </div>
    <div
      class="node graphNode"
      style="background-color: green; left: 308px; max-height: 64px; min-height: 64px; top: 32px; transition: left 0.5s, top 0.5s; width: 172px;"
    >
      <div
        aria-label="node2"
        class="label"
        data-mui-internal-clone-element="true"
      >
        node2
      </div>
      <div
        class="icon"
      >
        <svg
          aria-hidden="true"
          aria-label="Test icon tooltip"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-mui-internal-clone-element="true"
          data-testid="CheckCircleIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Graph renders a graph with one node 1`] = `
<DocumentFragment>
  <div
    class="root"
  >
    <div
      class="node graphNode"
      style="left: 86px; max-height: 64px; min-height: 64px; top: 32px; transition: left 0.5s, top 0.5s; width: 172px;"
    >
      <div
        aria-label="node1"
        class="label"
        data-mui-internal-clone-element="true"
      >
        node1
      </div>
      <div
        class="icon"
      >
        <svg
          aria-hidden="true"
          aria-label="Test icon tooltip"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-mui-internal-clone-element="true"
          data-testid="CheckCircleIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Graph renders a graph with two connectd nodes 1`] = `
<DocumentFragment>
  <div
    class="root"
  >
    <div
      class="node graphNode"
      style="left: 86px; max-height: 64px; min-height: 64px; top: 32px; transition: left 0.5s, top 0.5s; width: 172px;"
    >
      <div
        aria-label="node1"
        class="label"
        data-mui-internal-clone-element="true"
      >
        node1
      </div>
      <div
        class="icon"
      >
        <svg
          aria-hidden="true"
          aria-label="Test icon tooltip"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-mui-internal-clone-element="true"
          data-testid="CheckCircleIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"
          />
        </svg>
      </div>
    </div>
    <div
      class="node graphNode"
      style="left: 86px; max-height: 64px; min-height: 64px; top: 146px; transition: left 0.5s, top 0.5s; width: 172px;"
    >
      <div
        aria-label="node2"
        class="label"
        data-mui-internal-clone-element="true"
      >
        node2
      </div>
      <div
        class="icon"
      >
        <svg
          aria-hidden="true"
          aria-label="Test icon tooltip"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-mui-internal-clone-element="true"
          data-testid="CheckCircleIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"
          />
        </svg>
      </div>
    </div>
    <div>
      <div
        class="line"
        style="background-color: rgb(95, 99, 104); height: 2px; left: 171.75px; top: 119px; transform: rotate(-90deg); transition: left 0.5s, top 0.5s; width: 28.5px;"
      />
      <div
        class="line"
        style="background-color: rgb(95, 99, 104); height: 2px; left: 176.75px; top: 142px; transform: rotate(-90deg); transition: left 0.5s, top 0.5s; width: 18.5px;"
      />
      <div
        class="arrowHead"
        style="border-top-color: #5f6368; left: 180px; top: 148px; transform: rotate(0deg);"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Graph renders a graph with two connectd nodes in reverse order 1`] = `
<DocumentFragment>
  <div
    class="root"
  >
    <div
      class="node graphNode"
      style="left: 86px; max-height: 64px; min-height: 64px; top: 146px; transition: left 0.5s, top 0.5s; width: 172px;"
    >
      <div
        aria-label="node1"
        class="label"
        data-mui-internal-clone-element="true"
      >
        node1
      </div>
      <div
        class="icon"
      >
        <svg
          aria-hidden="true"
          aria-label="Test icon tooltip"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-mui-internal-clone-element="true"
          data-testid="CheckCircleIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"
          />
        </svg>
      </div>
    </div>
    <div
      class="node graphNode"
      style="left: 86px; max-height: 64px; min-height: 64px; top: 32px; transition: left 0.5s, top 0.5s; width: 172px;"
    >
      <div
        aria-label="node2"
        class="label"
        data-mui-internal-clone-element="true"
      >
        node2
      </div>
      <div
        class="icon"
      >
        <svg
          aria-hidden="true"
          aria-label="Test icon tooltip"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-mui-internal-clone-element="true"
          data-testid="CheckCircleIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"
          />
        </svg>
      </div>
    </div>
    <div>
      <div
        class="line"
        style="background-color: rgb(95, 99, 104); height: 2px; left: 171.75px; top: 119px; transform: rotate(-90deg); transition: left 0.5s, top 0.5s; width: 28.5px;"
      />
      <div
        class="line"
        style="background-color: rgb(95, 99, 104); height: 2px; left: 176.75px; top: 142px; transform: rotate(-90deg); transition: left 0.5s, top 0.5s; width: 18.5px;"
      />
      <div
        class="arrowHead"
        style="border-top-color: #5f6368; left: 180px; top: 148px; transform: rotate(0deg);"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Graph renders a graph with two disparate nodes 1`] = `
<DocumentFragment>
  <div
    class="root"
  >
    <div
      class="node graphNode"
      style="left: 86px; max-height: 64px; min-height: 64px; top: 32px; transition: left 0.5s, top 0.5s; width: 172px;"
    >
      <div
        aria-label="node1"
        class="label"
        data-mui-internal-clone-element="true"
      >
        node1
      </div>
      <div
        class="icon"
      >
        <svg
          aria-hidden="true"
          aria-label="Test icon tooltip"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-mui-internal-clone-element="true"
          data-testid="CheckCircleIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"
          />
        </svg>
      </div>
    </div>
    <div
      class="node graphNode"
      style="left: 308px; max-height: 64px; min-height: 64px; top: 32px; transition: left 0.5s, top 0.5s; width: 172px;"
    >
      <div
        aria-label="node2"
        class="label"
        data-mui-internal-clone-element="true"
      >
        node2
      </div>
      <div
        class="icon"
      >
        <svg
          aria-hidden="true"
          aria-label="Test icon tooltip"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-mui-internal-clone-element="true"
          data-testid="CheckCircleIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Graph shows an error message when the graph is invalid 1`] = `"<div class=\\"root\\"></div>"`;
